# graph-benchmarks

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: tests.yml
assets/diagrams/: schema-pg.dot  schema-rel.dot
deploy/: neo4j-compose.yml
graphbench/: __init__.py  _worker.py  cli.py  dataset.py  oracle.py  queries.py  report.py  runner.py  schema.py
graphbench/engines/: __init__.py  base.py  issundb_engine.py  ladybug_engine.py  lancegraph_engine.py  neo4j_engine.py
tests/: test_dataset.py  test_engine_integration.py  test_issundb_import.py  test_normalize.py  test_oracle.py  test_queries.py
